<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.imajery_v4.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_materi"
        android:name="com.example.imajery_v4.ui.materi.MateriFragment"
        android:label="@string/title_materi"
        tools:layout="@layout/fragment_materi" />

    <fragment
        android:id="@+id/navigation_perkembangan"
        android:name="com.example.imajery_v4.ui.users.perkembangan.PerkembanganFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_perkembangan" />
</navigation>